Adjusted the CSS to ensure the text wraps around the thumbnail properly.

--- a/css/blog.css
+++ b/css/blog.css
@@ -189,7 +189,7 @@
     float: right;
     margin: 0 0 10px 10px;
     object-fit: cover;
-    shape-outside: url(https://quenos.technology${post.attributes.Thumbnail.data.attributes.url});
+    shape-outside: inset(0);
 }
 
 .full-post .blog-content {
